Fix height of App to stop cutting off title

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,5 @@
 .App {
   display: grid;
   align-content: center;
-  height: 100%;
-  text-align: center;
+	text-align: center;
 }
